fixed up hamburger menu and spacing on header

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -3,7 +3,7 @@ $transition-speed: .25s;
 header {
     * { padding: 0; margin: 0; }
     padding: 10px 30px;
-    padding-bottom: 50px;
+
     color: white;
     
     a {
@@ -52,7 +52,7 @@ header {
                             width: 100%;
                         }
                     }
-                    
+
                     &.active {
                         color: var(--theme-color);
 
@@ -63,57 +63,19 @@ header {
                 }
             }
         }
-        .hamburger-container {
-            display: none;
-
-            .hamburger {
-                position: relative;
-                margin-top: 10px;
-                &, &:before, &:after {
-                    width: 30px;
-                    height: 4px;
-                    border-radius: 4px;
-                    background: white;
-                }
-                &:before, &:after {
-                    content: '';
-                    position: absolute;
-                    transition: .25s;
-                }
-                &:before { top: -8px; }
-                &:after { bottom: -8px; }
-
-                transition: .5s;
-                &.close {
-                    background: #0000;
-                    &:after { transform: rotate(0deg); top: 0; }
-                    &:before { transform: rotate(-90deg); top: 0; }
-                    transform: rotate(320deg);
-                }
-            }
-        }
     }
 }
 
 @media screen and (max-width: 750px) {
     header {
         padding-bottom: 0px;
+        margin-bottom: -40px;
         .content { 
             flex-direction: column;
             margin-bottom: -20px;
+
             .brand {
                 align-self: flex-start;
-            }
-
-            .hamburger-container {
-                display: inline-block;
-                align-self: flex-end;
-                margin-bottom: 30px;
-                cursor: pointer;
-                padding-bottom: 10px;
-                position: relative;
-                top: -60px;
-                z-index: 100;
             }
 
             nav {
@@ -127,22 +89,9 @@ header {
                 padding-left: 40px;
                 right: -200px;
 
-                &.open {
-                    animation: drag-in .5s forwards;
-                    @keyframes drag-in {
-                        from { right: -200px; }
-                        to { right: 0; }
-                    }
-                }
-                &.closed {
-                    right: -200px;
-
-                    animation: drag-out .5s;
-                    @keyframes drag-out {
-                        from { right: 0; }
-                        to { right: -200px; }
-                    }
-                }
+                transition: .5s;
+                &.open { right: 0; }
+                &.closed { right: -200px; }
             }
         }
     }
